fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ section.right-pannel {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
+    z-index: -999;
   }
 
 .terminal .terminal-output .format,
